# ibm-recommendations

./: README.md  pyproject.toml
ibm_recommendations/: Recommendations_with_IBM.py
scratch/notebooks/: Recommendations_with_IBM.ipynb
scratch/scripts/: Recommendations_with_IBM.py
tests/: project_tests.py  test_ibm_recommendations.py
