[tool.poetry]
name = "ibm-recommendations"
version = "0.1.0"
description = ""
authors = ["K S <8283247+sunnykan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.2"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
black = "^21.7b0"
mypy = "^0.910"
jupyterlab = "^3.1.7"
ipython = "^7.26.0"
ordered-set = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
